--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
 		<!-- <link rel="shortcut icon" type="image/ico" href="/src/assets/favicon.ico" /> -->
 		<title>Solid App</title>
 	</head>
-	<body>
+	<body style="background: black;">
 		<noscript>You need to enable JavaScript to run this app.</noscript>
 		<div id="root"></div>
 		<script src="/src/index.tsx" type="module"></script>
